<resources>
    <string name="app_name">FindYourApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Login">Login</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="example_mail_domain">example@mail.domain</string>
    <string name="phone_number">Phone number</string>
    <string name="select_user_type">Select user type</string>
    <string name="home">Home</string>
    <string name="requests">Requests</string>
    <string name="profile">Profile</string>
    <string name="job_type">Job Type</string>
    <string name="skills">Skills</string>
    <string name="required_skills">Required skills : </string>
    <string name="more_details">More Details</string>
    <string name="skill_score">Skill Score needed</string>
    <string name="job_description">Job Description</string>
    <string name="apply_job">Apply Job</string>
    <string name="collapse">collapse</string>
    <string name="Requested">Requested</string>
    <string name="company_name">Company </string>
    <string name="request_rejected">Rejected</string>
    <string name="request_pending">Pending</string>
    <string name="request_accepted">Accepted</string>
    <string name="email">Email</string>
    <string name="resume">Resume</string>
    <string name="add_update_resume">Add/Update Resume</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="upload_job">Upload Job</string>
    <string name="upload_new_job">Upload New Job</string>
    <string name="accept_request">Accept Request</string>
    <string name="delete_job">Delete Job</string>
    <string name="accept">Accept</string>
    <string name="see_resume">See resume</string>
    <string name="reject">Reject</string>

    <string-array name="userType">
        <item>Employer</item>
        <item>Employee</item>
    </string-array>

</resources>